# github_dash

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  safety.yml
docker/: Dockerfile  README.md
github_dash/: __init__.py  __main__.py  app.py  github_stats.py  layout.py
tests/: test_app.py
